--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^11.0",
         "laravel/sanctum": "dev-develop",
-        "laravel/tinker": "dev-develop"
+        "laravel/tinker": "dev-develop",
+        "maatwebsite/excel": "^1.1",
+        "phpoffice/phpexcel": "^1.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
